--- a/new.css
+++ b/new.css
@@ -74,16 +74,16 @@ span {
   background-image: url("images/slide9.jpg");
 }
 .slide10 {
-  background-image: url("twin.jpg");
+  background-image: url("images/twin.jpg");
 }
 .slide11 {
-  background-image: url("tlb.gif");
+  background-image: url("images/tlb.gif");
 }
 .slide12 {
-  background-image: url("gb.jpg");
+  background-image: url("images/gb.jpg");
 }
 .slide13 {
-  background-image: url("ah.jpg");
+  background-image: url("images/ah.jpg");
 }
 
 .slide-content {
